--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,16 @@
-spring.application.name = authentication-microservice
+spring.application.name = auth-microservice
 server.port = 8088
 
-spring.datasource.url = jdbc:mysql://cloud-computing-mysql-do-user-8717336-0.b.db.ondigitalocean.com:25060/users
+spring.datasource.url = jdbc:mysql://private-cloud-computing-mysql-do-user-8717336-0.b.db.ondigitalocean.com:25060/users
 spring.datasource.username = diets-mysql-user-db
 spring.datasource.password = D0fOw50EjK0W7SPl
 
 spring.jpa.hibernate.ddl-auto = validate
 
 spring.cloud.config.enabled = false
+spring.cloud.config.fail-fast = true
 
-eureka.instance.prefer-ip-address=true
-eureka.instance.hostname=localhost
-
-eureka.client.service-url.default-zone = http://localhost:8761/eureka
 spring.zipkin.baseUrl = http://localhost:9411/
 
 jwt.secret = Ug1HrAXT7GfAVuvZlihH
 jwt.token.validity=18000000
-
-
-logging.level.org.springframework.security=DEBUG
